plugins {
	id 'org.springframework.boot' version '2.2.4.RELEASE'
	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
	id 'org.asciidoctor.convert' version '1.5.8'
	id 'java'
	id 'application'

}
apply plugin: 'checkstyle'

mainClassName='nl.tudelft.oopp.group43.project.Application'
group = 'nl.tudelft.oopp.group43'
version = '0.0.1'
sourceCompatibility = '8'
configurations {
	developmentOnly
	runtimeClasspath {
		extendsFrom developmentOnly
	}
}

repositories {
	mavenCentral()
	maven {
		url "http://www.evosuite.org/m2"
	}
}

ext {
	set('snippetsDir', file("build/generated-snippets"))
}

checkstyle {
	toolVersion "8.25"
	configFile = rootProject.file('config/checkstyle/checkstyle.xml')

	ignoreFailures = false
	maxErrors = 0
	maxWarnings = 0
}

dependencies {
	implementation "com.google.guava:guava:28.2-jre"
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	compile group: 'org.springframework.security', name: 'spring-security-core', version: '5.2.2.RELEASE'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'org.postgresql:postgresql'
	compile (group: 'org.springframework.boot', name: 'spring-boot-starter-parent', version: '1.2.1.RELEASE')
	compile "com.google.guava:guava:16+"
	compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
	compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.19'
	compile group: 'joda-time', name: 'joda-time', version: '2.3'
	testCompile 'org.evosuite:evosuite-standalone-runtime:1.0.6'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	compile group: 'javax', name: 'javaee-api', version: '8.0'
	compile 'org.springframework.boot:spring-boot-starter-tomcat'
	compile("javax.servlet:jstl")
	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
	compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
	compile("org.apache.tomcat.embed:tomcat-embed-jasper")
	compile group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '2.2.5.RELEASE'
	testCompile('org.springframework.boot:spring-boot-starter-test')
	compile group: 'joda-time', name: 'joda-time', version: '2.3'
	compileOnly('org.projectlombok:lombok')
	compile group: 'commons-validator', name: 'commons-validator', version: '1.4.0'

	testCompile 'org.junit.jupiter:junit-jupiter-engine:5.2.0'
	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
	//testImplementation 'org.springframework.security:spring-security-test'
}

test {
	outputs.dir snippetsDir
	useJUnitPlatform()
}

asciidoctor {
	inputs.dir snippetsDir
	dependsOn test
}
